# crules

./: .env.example  .flake8  .gitignore  CHANGELOG.md  Gemfile  LICENSE.txt  README.md  crules.gemspec  crules.rb  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  要件定義書
.cursor/rules/: 02-general-coding-style.mdc  03-requirements.mdc  04-architecture.md  git-workflow.mdc
.github/workflows/: auto-release.yml  ci-cd-pipeline.yml  ci.yml  homebrew.yml  release.yml  update-homebrew.yml
.notes/: development_phases.md  project_structure.md  requirements.md  task_records.md  user_usage.md
Formula/: crules.rb
crules/: .gitignore  CHANGELOG.md  README.md  __init__.py  cli.py  commands.py  config.py  exceptions.py  logger.py  pytest.ini  reporter.py  requirements.txt  setup.py  testing.py  utils.py  validation.py  validator.py
crules.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crules/crules/: README.md  __init__.py  cli.py  commands.py  exceptions.py  reporter.py  utils.py
crules/tests/: conftest.py
docs/: development.md  error_handling.md
lib/: crules.rb
lib/crules/: cli.rb  version.rb
spec/: spec_helper.rb
spec/crules/: cli_spec.rb
templates/flutter/: 04-architecture.md  06-flutter_style.md
tests/: conftest.py  test_commands.py  test_reporter.py  test_testing.py  test_validator.py
tests/integration/: test_commands_integration.py  test_deploy_command.py  test_init_command.py  test_list_command.py  test_note_management.py  test_rule_management.py  test_tree_command.py  (+2 more)
(+52 files in other folders)
